update Dokerfile with jlink